--- a/Project1/Project1/Project1.vcxproj
+++ b/Project1/Project1/Project1.vcxproj
@@ -73,7 +73,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <IncludePath>SDL2 &amp; SDL2_image\SDL2_image-2.0.1\include;$(IncludePath)</IncludePath>
-    <LibraryPath>SDL2 &amp; SDL2_image\SDL2_image-2.0.1\lib\x64;$(LibraryPath)</LibraryPath>
+    <LibraryPath>SDL2 &amp; SDL2_image\SDL2_image-2.0.1\lib2\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -114,7 +114,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>SDL2 &amp; SDL2_image\SDL2_image-2.0.1\lib\x64;SDL2 &amp; SDL2_image\SDL2-2.30.1\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>SDL2 &amp; SDL2_image\SDL2_image-2.0.1\lib2\x64;SDL2 &amp; SDL2_image\SDL2-2.30.1\lib2\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
