--- a/Project1/Project1/Project1.vcxproj
+++ b/Project1/Project1/Project1.vcxproj
@@ -72,8 +72,8 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>SDL2 &amp; SDL2_image\SDL2_image-2.0.1\include;$(IncludePath)</IncludePath>
-    <LibraryPath>SDL2 &amp; SDL2_image\SDL2_image-2.0.1\lib2\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>SDL2 &amp; SDL2_image\SDL2_ttf-2.22.0\include;SDL2 &amp; SDL2_image\SDL2_image-2.0.1\include;$(IncludePath)</IncludePath>
+    <LibraryPath>SDL2 &amp; SDL2_image\SDL2_ttf-2.22.0\lib2\x64;SDL2 &amp; SDL2_image\SDL2_image-2.0.1\lib2\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -109,13 +109,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>SDL2 &amp; SDL2_image\SDL2_image-2.0.1\include;SDL2 &amp; SDL2_image\SDL2-2.30.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>SDL2 &amp; SDL2_image\SDL2_ttf-2.22.0\include;SDL2 &amp; SDL2_image\SDL2_image-2.0.1\include;SDL2 &amp; SDL2_image\SDL2-2.30.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>SDL2 &amp; SDL2_image\SDL2_image-2.0.1\lib2\x64;SDL2 &amp; SDL2_image\SDL2-2.30.1\lib2\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>SDL2 &amp; SDL2_image\SDL2_ttf-2.22.0\lib2\x64;SDL2 &amp; SDL2_image\SDL2_image-2.0.1\lib2\x64;SDL2 &amp; SDL2_image\SDL2-2.30.1\lib2\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -138,15 +138,19 @@
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="Login.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Question.cpp" />
+    <ClCompile Include="RenderText.cpp" />
     <ClCompile Include="TextureManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="Login.h" />
     <ClInclude Include="Question.h" />
+    <ClInclude Include="RenderText.h" />
     <ClInclude Include="TextureManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
