Upload remaining question banks Add .txt's to resource files for easy access in visual studio

--- a/Project1/Project1/Project1.vcxproj
+++ b/Project1/Project1/Project1.vcxproj
@@ -153,6 +153,14 @@
     <ClInclude Include="RenderText.h" />
     <ClInclude Include="TextureManager.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="textfiles\Leaderboard.txt" />
+    <Text Include="textfiles\level1QuestionBank.txt" />
+    <Text Include="textfiles\level2QuestionBank.txt" />
+    <Text Include="textfiles\level3QuestionBank.txt" />
+    <Text Include="textfiles\level4QuestionBank.txt" />
+    <Text Include="textfiles\PlayerInfo.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
