added a cheeky little leaderboard class that displays all the names found in the leaderboard textfile, together with a leaderboard background. To make switching between leaderboard, login, level 1 etc a bit easier I added a "gameState" variable to the game class to make it easier to code with in the future.

--- a/Project1/Project1/Project1.vcxproj
+++ b/Project1/Project1/Project1.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="Leaderboard.cpp" />
     <ClCompile Include="Login.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Question.cpp" />
@@ -149,6 +150,7 @@
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="Leaderboard.h" />
     <ClInclude Include="Login.h" />
     <ClInclude Include="Question.h" />
     <ClInclude Include="RenderText.h" />
